--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,16 @@
+* {
+    box-sizing: border-box;
+}
+
 .App {
-  text-align: center;
+    /* text-align: center; */
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+header {
+    text-align: center;
+    height: 70px;
+    background: rgb(50, 50, 119);
+    color: white;
+    padding: 10px;
+    font-size: 2rem;
 }
