--- a/src/App.css
+++ b/src/App.css
@@ -46,7 +46,7 @@
     width: 85%;
     background: darkgray;
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-around;
     align-items: center;
     margin: 2vh 0 50px 0;
     padding: 10px;
@@ -63,22 +63,20 @@
     padding: 10px;
 }
 
-
-/* .run {
-    height: 130px;
-    width: 200px;
-    background: black;
-} */
-
 .watch-list-title {
     margin-top: -50px;
     color: white;
 }
 
 .watch-list {
-    height: 30vh;
+    height: 40vh;
     width: 70%;
     background: gray;
     margin-top: -17px;
-    margin-bottom: 50px;
+    margin-bottom: 10px;
+}
+
+.run {
+    display: flex;
+    flex-direction: column;
 }
