about to try something risky

--- a/src/App.css
+++ b/src/App.css
@@ -8,13 +8,13 @@ body {
 
 .App {
     height: 100%;
-    width: auto;
+    width: 100%;
     background: grey;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    background: linear-gradient(-50deg, rgb(116, 116, 116), darkgray);
+    background: linear-gradient(30deg, rgb(116, 116, 116), rgb(145, 145, 180));
 }
 
 .header {
@@ -68,7 +68,7 @@ body {
     min-height: 150px;
     height: auto;
     width: 85%;
-    background: darkgray;
+    background: linear-gradient(-50deg, grey, darkgrey);
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -78,11 +78,12 @@ body {
 }
 
 .run-display-search {
-    min-height: 150px;
+    min-height: 250px;
     height: auto;
     width: 85%;
-    background: darkgray;
     display: flex;
+    flex-direction: column;
+    background: linear-gradient(-50deg, grey, darkgrey);
     justify-content: flex-start;
     align-items: center;
     margin: 10px 0 100px 0;
@@ -90,8 +91,21 @@ body {
     box-shadow: 2px 2px 10px black;
 }
 
+.input {
+    height: 35px;
+    display: flex;
+    justify-content: flex-start;
+}
+
+.data {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    width: 100%;
+}
+
 .watch-list-title {
-    margin-top: -50px;
+    margin-top: -10px;
     color: white;
 }
 
