--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,7 @@ body {
     color: white;
     padding: 10px;
     font-size: 2rem;
-    margin-top: -6vh;
+    margin-top: 0;
     margin-bottom: 7vh;
     letter-spacing: 3px;
     font-weight: bold;
@@ -41,7 +41,6 @@ body {
     padding: 10px;
     font-size: 2rem;
     margin-top: -6vh;
-    margin-bottom: 7vh;
     letter-spacing: 3px;
     font-weight: bold;
 }
@@ -78,13 +77,13 @@ body {
 }
 
 .run-display-search {
-    min-height: 250px;
+    min-height: 200px;
     height: auto;
     width: 85%;
     display: flex;
     flex-direction: column;
     background: linear-gradient(-50deg, grey, darkgrey);
-    justify-content: flex-start;
+    justify-content: space-around;
     align-items: center;
     margin: 10px 0 100px 0;
     padding: 10px;
@@ -115,7 +114,7 @@ body {
     width: 60%;
     background: rgb(43, 43, 43);
     margin-top: -17px;
-    margin-bottom: 10px;
+    margin-bottom: 100px;
     color: white;
     display: flex;
     justify-content: center;
@@ -127,6 +126,19 @@ body {
     flex-direction: column;
     align-items: center;
     flex-wrap: wrap;
+}
+
+.run-search {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex-wrap: wrap;
+    margin-top: 30px;
+}
+
+.data {
+    display: flex;
+    justify-content: space-around;
 }
 
 button {
